GMS-127 Issue fixes